--- a/railway.toml
+++ b/railway.toml
@@ -8,7 +8,7 @@ dockerfilePath = "Dockerfile"
 
 [deploy]
 # Seed database then start server (with proxy headers for Railway)
-startCommand = "sh -c 'python -m src.db.seed && uvicorn src.main:app --host 0.0.0.0 --port ${PORT:-8000} --proxy-headers --forwarded-allow-ips=\"*\"'"
+startCommand = "sh -c 'python -m src.db.seed && uvicorn src.main:app --host 0.0.0.0 --port ${PORT:-8000} '"
 healthcheckPath = "/health"
 healthcheckTimeout = 30
 restartPolicyType = "on_failure"
